alignment fix

--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -61,7 +61,7 @@
 
 .right-conatiner .latency{
     width: 50%;
-    background-color: white;
+   
 }
 .event {
     background-color: white;
